// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformers/script/transformers transformScript 1`] = `
Object {
  "map": Object {
    "file": "test.vue.script.transformed.ts",
    "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA",
    "names": Array [],
    "sources": Array [
      "test.vue.script.ts",
    ],
    "sourcesContent": Array [
      "
import { ref, defineComponent } from 'vue'
import HelloWorld from './HelloWorld.vue'

export default defineComponent({
  components: {
    HelloWorld
  },
  setup(props) {
    const count = ref(0)
    const inc = () => {
      count.value++
    }
    console.log(count.value.length)

    return {
      count,
      inc
    }
  }
})
    ",
    ],
    "version": 3,
  },
  "transformed": "
import { ref, defineComponent } from 'vue'
import HelloWorld from './HelloWorld.vue'

const __Component = defineComponent({
  components: {
    HelloWorld
  },
  setup(props) {
    const count = ref(0)
    const inc = () => {
      count.value++
    }
    console.log(count.value.length)

    return {
      count,
      inc
    }
  }
})
    

type __ExternalComponents = {
_component_HelloWorld: ClassInstance<typeof HelloWorld>;
}

type __ResolveComponentNames = {
HelloWorld: '_component_HelloWorld';
}


export default __Component;
type __ComponentType = ClassInstance<typeof __Component>;


declare function _createVNode<N extends (keyof __ExternalComponents | _VNodeTypes | _ClassComponent), C = N extends keyof __ExternalComponents ?  __ExternalComponents[N] : unknown>(type: N, ...args: (N extends keyof __ExternalComponents ? {} extends PropTypes<C> ? [(_VNodeProps & PropTypes<C>)?, unknown?, number?, (string[] | null)?] : [(_VNodeProps & PropTypes<C>), unknown?, number?, (string[] | null)?] : [((_Data & _VNodeProps) | null)?, unknown?, number?, (string[] | null)?])): _VNode;

declare function _resolveComponent<N extends (keyof __ResolveComponentNames | string)>(name: N): N extends keyof __ResolveComponentNames ? __ResolveComponentNames[N] : string
",
}
`;

exports[`transformers/script/transformers transformScript 2`] = `
Object {
  "map": Object {
    "file": "test.vue.script.transformed.ts",
    "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA",
    "names": Array [],
    "sources": Array [
      "test.vue.script.ts",
    ],
    "sourcesContent": Array [
      "
import { defineComponent } from 'vue'

export default defineComponent({
  props: {
    msg: {
      type: String,
      required: true
    }
  }
})
    ",
    ],
    "version": 3,
  },
  "transformed": "
import { defineComponent } from 'vue'

const __Component = defineComponent({
  props: {
    msg: {
      type: String,
      required: true
    }
  }
})
    

type __ExternalComponents = {}

type __ResolveComponentNames = {}


export default __Component;
type __ComponentType = ClassInstance<typeof __Component>;


declare function _createVNode<N extends (keyof __ExternalComponents | _VNodeTypes | _ClassComponent), C = N extends keyof __ExternalComponents ?  __ExternalComponents[N] : unknown>(type: N, ...args: (N extends keyof __ExternalComponents ? {} extends PropTypes<C> ? [(_VNodeProps & PropTypes<C>)?, unknown?, number?, (string[] | null)?] : [(_VNodeProps & PropTypes<C>), unknown?, number?, (string[] | null)?] : [((_Data & _VNodeProps) | null)?, unknown?, number?, (string[] | null)?])): _VNode;

declare function _resolveComponent<N extends (keyof __ResolveComponentNames | string)>(name: N): N extends keyof __ResolveComponentNames ? __ResolveComponentNames[N] : string
",
}
`;
